--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -8,7 +8,7 @@ linkTitle = "Goldydocs"
 <div class="mx-auto">
 	<p class="lead mt-5">&nbsp;</p>
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		Get Started <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+		Go To Camp <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 </div>
 {{< /blocks/cover >}}
