Made the landing page prettier

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,14 +1,14 @@
 +++
-title = "Goldydocs"
-linkTitle = "Goldydocs"
+title = "Bootcamp Training Materials"
+linkTitle = "Bootcamp Training Materials"
 
 +++
 
-{{< blocks/cover title="Welcome to Bootcamp!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Bootcamp Training Materials" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<p class="lead mt-5">&nbsp;</p>
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		Go To Camp <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+		Take a Look <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 </div>
 {{< /blocks/cover >}}
